--- a/Denisevich_MailSender/Denisevich_MailSender.csproj
+++ b/Denisevich_MailSender/Denisevich_MailSender.csproj
@@ -38,6 +38,10 @@
     <Reference Include="FontAwesome.WPF, Version=4.7.0.37774, Culture=neutral, PublicKeyToken=0758b07a11a4f466, processorArchitecture=MSIL">
       <HintPath>packages\FontAwesome.WPF.4.7.0.9\lib\net40\FontAwesome.WPF.dll</HintPath>
     </Reference>
+    <Reference Include="MailSendLibrary, Version=1.0.1.1, Culture=neutral, PublicKeyToken=7767c6a07a5fdcb8, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>C:\Windows\Microsoft.NET\assembly\GAC_MSIL\MailSendLibrary\v4.0_1.0.1.1__7767c6a07a5fdcb8\MailSendLibrary.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
