--- a/MailSendLibrary/MailSendLibrary.csproj
+++ b/MailSendLibrary/MailSendLibrary.csproj
@@ -52,7 +52,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CustomSmtpClient.cs" />
+    <Compile Include="CustomSmtpClients.designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>CustomSmtpClients.dbml</DependentUpon>
+    </Compile>
     <Compile Include="EmailSendServiceClass.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
@@ -69,10 +73,22 @@
       <AutoGen>True</AutoGen>
     </Compile>
     <Compile Include="Recipient.cs" />
-    <Compile Include="Senders.cs" />
+    <Compile Include="Senders.designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Senders.dbml</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="CustomSmtpClients.dbml">
+      <Generator>MSLinqToSQLGenerator</Generator>
+      <LastGenOutput>CustomSmtpClients.designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="CustomSmtpClients.dbml.layout">
+      <DependentUpon>CustomSmtpClients.dbml</DependentUpon>
+    </None>
     <None Include="MailSendService.snk" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -82,6 +98,14 @@
       <Generator>MSLinqToSQLGenerator</Generator>
       <LastGenOutput>Recepients.designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
+    </None>
+    <None Include="Senders.dbml">
+      <Generator>MSLinqToSQLGenerator</Generator>
+      <LastGenOutput>Senders.designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Senders.dbml.layout">
+      <DependentUpon>Senders.dbml</DependentUpon>
     </None>
   </ItemGroup>
   <ItemGroup>
